# NoProp

./: .gitignore  README.md  main.py  pyproject.toml
config_data/: bloodmnist_noprop_ct.json  bloodmnist_noprop_dt.json  cifar100_noprop_ct.json  cifar100_noprop_dt.json  cifar10_noprop_ct.json  cifar10_noprop_dt.json  mnist_noprop_ct.json  mnist_noprop_dt.json  pathmnist_noprop_ct.json  pathmnist_noprop_dt.json
docs/latex/: NoProp.tex  references.bib
models/: NoProp_CT_CIFAR100_28_01.00%.pt  NoProp_CT_CIFAR10_73_61.79%.pt  NoProp_CT_MEDMNIST_85_75.50%.pt  NoProp_CT_MNIST_44_99.00%.pt
src/components/: backbone.py  block.py  concatenator.py  ct_block.py  ct_concatenator.py  ct_noise_scheduler.py  dt_block.py  dt_concatenator.py  dt_noise_scheduler.py  noise_scheduler.py  resnet_type.py  time_scheduler.py
src/data/: cifar100_dataset.py  cifar10_dataset.py  dataset_manager.py  medmnist_dataset.py  mnist_dataset.py
src/embeddings/: ct_label_encoder.py  dt_label_encoder.py  label_encoder.py  sinusoidal_embedding.py  time_encoder.py
src/models/: base_model.py  model_type.py  model_wrapper.py  noprop_ct.py  noprop_dt.py
src/scripts/: train_test.py
src/utils/: device.py  model_config.py  test_utils.py  train_config.py  train_utils.py
