[project]
name = "noprop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pip>=25.1.1",
    "pydoctest>=0.2.1",
    "sphinx>=8.2.3",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "types-tqdm>=4.67.0.20250516",
    "wandb>=0.20.1",
]
[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
